2011-08-26 Randazzo Marco <marco.randazzo@iit.it>
    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.cpp
    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.h
	improved method yarp::dev::IImpedanceControl::getCurrentImpedanceLimit()

2011-08-25 Randazzo Marco <marco.randazzo@iit.it>
    * CMakeLists.txt: iCub now requires YARP 2.3.11
    * main/src/core/iCubInterface/ControlBoardWrapper2.cpp
    * main/src/core/iCubInterface/ControlBoardWrapper2.h
    * main/src/tools/robotMotorGui/src/*
    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.cpp
    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.h
	added new method yarp::dev::IImpedanceControl::getCurrentImpedanceLimit()

2011-08-32 Lorenzo Natale <lorenzo.natale@iit.it>
    * tagging 1.1.6
	
2011-08-18 Lorenzo Natale <lorenzo.natale@iit.it>
    * main/CMakeLists.txt: simpler YARP version check

2011-07-21 Randazzo Marco <marco.randazzo@iit.it>
	* main/src/core/iCubInterface/ControlBoardWrapper.cpp
	* main/src/core/iCubInterface/ControlBoardWrapper2.cpp
	* main/src/core/iCubInterface/ControlBoardWrapper2.h
	Old methods of yarp::dev::IImpedanceControl have been removed (see 2011-05-26 changelog)
	Fixed a mismatch between yarp and icub VOCABS for yarp::dev::IControlMode interface
	
2011-18-07  Lorenzo Natale  <lorenzo.natale@iit.it>
    * Forcing ICUB_APPLICATION_PREFIX from ICUB_ROOT
	* Disable and complain if ICUB_ROOT is not set
	
2011-15-07  Lorenzo Natale  <lorenzo.natale@iit.it>
    * tagging version 1.1.3

2011-07-02  Ugo Pattacini  <ugo.pattacini@iit.it>
     * main/src/libraries/icubmod/gazeController:
     new methods get3DPoint() and get3DPointOnPlane() added to
     facilitate 2d-3d mapping.
	 
2011-06-1 Lorenzo Natale <lorenzo.natale@iit.it>
    * Tagging version 1.1.1
    
2011-06-1 Lorenzo Natale <lorenzo.natale@iit.it>
    * app/iCubCluster/icub-cluster.py: patch from Lars Schillingmann to 