@@ -1,3 +1,6 @@
+2011-09-06 Lorenzo Natale <lorenzo.natale@iit.it>
+    * moved iCubInterfaceGuiLib to libraries to fix dependencies
+	
 2011-08-26 Randazzo Marco <marco.randazzo@iit.it>
     * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.cpp
     * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.h
